make Category API with seeder
