# app/Http/Requests/Category/StoreCategoryRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\Category;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreCategoryRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|max:100|unique:categories,name',
+            'description' => 'nullable|string',
+            'is_active' => 'boolean',
+        ];
+    }
+}
