# app/Http/Requests/Category/UpdateCategoryRequest.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Requests\Category;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateCategoryRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        $categoryId = $this->route('category')?->id;
+
+        return [
+            'name'        => "required|string|max:100|unique:categories,name,{$categoryId}",
+            'description' => 'nullable|string',
+            'is_active'   => 'boolean',
+        ];
+    }
+}
